--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.11.0",
     "bcrypt": "^5.1.1",
+    "nestjs-zod": "^3.0.0",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
